# distributedschedule_dms_fwk_lite

./: BUILD.gn  README.md  README_zh.md  bundle.json  readme.md
include/: dmslite_famgr.h  dmslite_log.h  dmslite_pack.h  dmslite_permission.h  dmslite_session.h  dmslite_utils.h
interfaces/innerkits/: dmsfwk_interface.h
moduletest/dtbschedmgr_lite/: BUILD.gn
moduletest/dtbschedmgr_lite/source/: famgr_test.cpp  permission_test.cpp  tlv_parse_test.cpp
source/: dmslite_famgr.c  dmslite_feature.c  dmslite_msg_handler.c  dmslite_pack.c  dmslite_parser.c  dmslite_permission.c  dmslite_session.c
source/adapter/dms/: dmslite_famgr.c
source/adapter/softbus/: dmslite_session.c
