# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/test.gni")

if (ohos_kernel_type == "liteos_a" || ohos_kernel_type == "linux") {
  # feature: distributed_schedule_test_dms
  unittest("distributed_schedule_test_dms") {
    output_extension = "bin"
    sources = [
      "source/famgr_test.cpp",
      "source/tlv_parse_test.cpp"
    ]

    defines = [
      "OHOS_APPEXECFWK_BMS_BUNDLEMANAGER",
      "XTS_SUITE_TEST"
    ]

    include_dirs = [
      "//foundation/distributedschedule/dmsfwk_lite/include",
      "//foundation/distributedschedule/dmsfwk_lite/interfaces/innerkits",
      "${aafwk_lite_path}/interfaces/kits/ability_lite",
      "${aafwk_lite_path}/interfaces/kits/want_lite",
      "${appexecfwk_lite_path}/interfaces/kits/bundle_lite",
      "${appexecfwk_lite_path}/interfaces/innerkits/bundlemgr_lite",    
    ]

    deps = [
      "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
      "//foundation/communication/ipc_lite:liteipc_adapter",
      "//foundation/distributedschedule/dmsfwk_lite:dtbschedmgr",
      "//foundation/distributedschedule/samgr_lite/samgr:samgr",
      "${aafwk_lite_path}/frameworks/abilitymgr_lite:aafwk_abilityManager_lite",
      "${appexecfwk_lite_path}/frameworks/bundle_lite:bundle",
    ]

    output_dir = "$root_out_dir/test/unittest/distributedschedule"
  }
  group("unittest") {
    deps = [ ":distributed_schedule_test_dms" ]
  }
}
